plugins {
    id 'java'
    id 'jvm-test-suite'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(22))
    }
}

apply from: "$rootProject.projectDir/srcsets.gradle"

dependencies {
    implementation project(':code:index:api')

    implementation project(':code:common:db')
    implementation project(':code:common:config')
    implementation project(':code:common:model')

    implementation project(':code:functions:search-query:api')

    implementation project(':code:index:query')

    implementation project(':code:libraries:language-processing')
    implementation project(':code:libraries:term-frequency-dict')

    implementation project(':third-party:porterstemmer')
    implementation project(':code:libraries:language-processing')
    implementation project(':code:libraries:term-frequency-dict')
    implementation project(':code:features-convert:keyword-extraction')

    implementation libs.bundles.slf4j

    implementation libs.prometheus
    implementation libs.bundles.grpc
    implementation libs.notnull
    implementation libs.guice
    implementation libs.trove
    implementation libs.fastutil
    implementation libs.bundles.gson
    implementation libs.bundles.mariadb

    testImplementation libs.bundles.slf4j.test
    testImplementation libs.bundles.junit
    testImplementation libs.mockito
}
